<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@color/background_color"
    tools:context=".SubirServicios">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/upload_services_title"
        android:textSize="24sp"
        android:textColor="@android:color/black"
        android:layout_marginBottom="16dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_service" />

    <Spinner
        android:id="@+id/spinnerServices"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp" />

    <EditText
        android:id="@+id/editTextServicePrice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/service_price_hint"
        android:inputType="numberDecimal"
        android:layout_marginTop="8dp" />

    <EditText
        android:id="@+id/editTextServiceAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/service_address_hint"
        android:inputType="text"
        android:layout_marginTop="8dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_days_and_times" />

    <Button
        android:id="@+id/buttonAddDayTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_day_time"
        android:layout_marginTop="8dp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewDaysTimes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp" />

    <Button
        android:id="@+id/buttonUploadService"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/upload_service_button"
        android:layout_marginTop="16dp" />
</LinearLayout>
